mudei o arquivo index

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <hr>
     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, corrupti fuga exercitationem quaerat dignissimos quis. Obcaecati explicabo quaerat repellat deleniti dicta maiores eius animi, magni alias! Delectus mollitia enim vitae?</p>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae amet obcaecati natus labore nisi aut eum ipsum, temporibus itaque voluptatem dicta nulla fugit error illum adipisci quod blanditiis omnis sequi.</p>
+    <p>Esse parágrafo foi adicionado dentro do GitHub Desktop para LINUX &lt;3 </p>
 </body>
 </html>
